# 42_rag

./: .gitignore  Makefile  README.md  pyproject.toml  steps.md
src/: __main__.py
src/llm/: llm_wrapper.py
