[project]
name = "rag"
version = "0.1.0"
description = "RAG against the machine. Will you answer my questions?"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "tqdm>=4.68.2",
    "transformers>=5.11.0",
]
