[project]
name = "rag"
version = "0.1.0"
description = "RAG against the machine. Will you answer my questions?"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.11.0",
    "uuid>=1.30",
]
